# CppStudy

./: .clang-format  .gitignore
doc/: cppStudy.tex  elegantnote-cn.tex  elegantnote-en.tex  elegantnote.cls
doc/background/: background.tex
doc/image/: scatter.py
lambda/: inheritLambda.cpp  lambda.md  main.cpp  overloadLambda.cpp
mpl/: get_first_if.h  index_sequence.h  main.cpp  tuple.h
random/: main.cpp
rlvalue/: move.cpp
stl/literal/: literals.cpp
stl/variant/: header.h  main.cpp  stl-variant.md  variant_get.h  variant_polymoprhism.h  variant_size.h  variant_visit.h
template/: apply_fun_to_container.h  dot.h  factorial.h  factorial_1.h  future.cpp  gcmlcm.cpp  main.cpp  mulate.cpp  nesting.h  root.h  sequentialAdd.cpp  sfinaf.h  sfine.cpp  template.md  variadic.cpp
template/TypeList/: typeList.h
template/ast/: main.cpp  pred_expr.h  pred_expr_traits.h  shape.h  stl_iterator_traits.h
template/crtp/: constructor_forwarding.h  crtp (2).h  crtp.h  main (2).cpp  main.cpp
template/expr/: expr.h  lazy.cpp  main.cpp  mylazy.cpp
template/foldExpression/: foldExpression.h  main.cpp
template/lazyExpr/: matrixTraits.h
template/log/: log.h  main.cpp
template/message/: color.h  debug.h  delimiter.h  error.h  info.h  message.h  messageStream.h  timer.h  warning.h
template/nonTerminalExpr/: main.cpp  matrix.h  matrix_traits.h
template/tensor/: dot.h  main.cpp
template/terminalExpr/: main.cpp  matrix.h
template/test/: CMakeLists.txt  test_main.cpp  test_typelist.cpp
template/tmp/: et1.h  inte.h  isClass.h
typeTraits/: autoType.cpp  main.cpp
